...
    
    private func isUITesting() -> Bool {
        ProcessInfo.processInfo.arguments.contains("UI-TESTING")
    }
    
    private func sendMockBeers() {
        let beers = [createBeer(id: 1, name: "Buzz"), createBeer(id: 2, name: "Trashy Blonde")]
        beersPublisher.send(.success(beers))
    }
    
    private func createBeer(id: Int, name: String, imageURL: String? = "", yeast: String? = "") -> Beer {
        Beer(id: id,
             name: name,
...
